@@ -5,20 +5,21 @@
 
 # Specify the required Java version.
 # Only major version is checked. Minor version or any other version string info is left out.
-REQUIRED_TEXT_VERSION=13
+REQUIRED_TEXT_VERSION=14
 
 # Build Parameters
+REVISON_INC="1"
 PACKAGE=YES
-SUBSTANCE_PKG="2.0.1"
+# Package for Java 11 (remove in weasis 4)
+SUBSTANCE_PKG="3.5.0"
 
 # Options
 # jdk.unsupported => sun.misc.Signal
+# jdk.localedata => other locale (en_us) data are included in the jdk.localedata
 # jdk.jdwp.agent => package for debugging agent
-# jdk.pack => jpack required to unpacked bundle.jar.pack.gz
-JDK_MODULES="java.base,java.compiler,java.datatransfer,java.desktop,java.logging,java.management,java.prefs,java.xml,jdk.unsupported,jdk.pack,jdk.jdwp.agent"
+JDK_MODULES="java.base,java.compiler,java.datatransfer,java.desktop,java.logging,java.management,java.prefs,java.xml,jdk.localedata,jdk.charsets,jdk.crypto.ec,jdk.crypto.cryptoki,jdk.unsupported,jdk.jdwp.agent"
 NAME="Weasis"
-IDENTIFIER="org.weasis.viewer"
-JVM_ARGS="-Dgosh.port=17179 #-Daudit.log=true #-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8789"
+IDENTIFIER="org.weasis.launcher"
 
 # Aux functions:
 die ( ) {
@@ -58,7 +59,7 @@ do
 echo "Usage: package-weasis.sh <options>"
 echo "Sample usages:"
 echo "    Build an installer for the current platform with the minimal required parameters"
-echo "        package-weasis.sh --input /home/user/weasis-portable --jdk /home/user/jdk-13"
+echo "        package-weasis.sh --input /home/user/weasis-portable --jdk /home/user/jdk-16"
 echo ""
 echo "Options:"
 echo " --help -h
@@ -70,7 +71,7 @@ echo " --output -o
 Path of the base output directory.
 Default value is the current directory"
 echo " --jdk -j
-Path of the jdk with the jpackage module (>= jdk-13)"
+Path of the jdk with the jpackage module (>= jdk-16+12)"
 echo " --jdk-modules
 List of modules to build the Java Runtime
 If not set, a minimal default list is applied"
@@ -106,12 +107,23 @@ esac
 done
 set -- "${POSITIONAL[@]}" # restore positional parameters
 
+
+curPath=$(dirname "$(readlink -f "$0")")
+rootdir="$(dirname "$curPath")"
+rootdir="$(dirname "$rootdir")"
+
+if [ -z "$INPUT_PATH" ] ; then
+  INPUT_PATH="${rootdir}/weasis-distributions/target/portable-dist/weasis-portable"
+fi
+
 if [ "$machine" = "windows" ] ; then
   INPUT_PATH_UNIX=$(cygpath -u "$INPUT_PATH")
   OUTPUT_PATH_UNIX=$(cygpath -u "$OUTPUT_PATH")
+  RES="${curPath}\resources\$machine"
 else
   INPUT_PATH_UNIX="$INPUT_PATH"
   OUTPUT_PATH_UNIX="$OUTPUT_PATH"
+  RES="${curPath}/resources/$machine"
 fi
 
 # Set custom JDK path (>= JDK 11)
@@ -160,19 +172,16 @@ if ( "$JAVACMD" -version 2>&1 | grep -q "64" ) ; then
   if [ "$arc" = "x86" ] ; then
     die "The 64-bit JDK is not compatible with the running architecture ($ARC_OS)"
   fi
+  ARC_NAME="x86-64"
   ARC_OS="$machine-x86-64"
 else
+  ARC_NAME="x86"
   ARC_OS="$machine-x86"
 fi
 
 if [ -z "$OUTPUT_PATH" ] ; then
   OUTPUT_PATH="weasis-$ARC_OS-jdk$REQUIRED_TEXT_VERSION-$WEASIS_VERSION"
   OUTPUT_PATH_UNIX="$OUTPUT_PATH"
-fi
-
-echo Output path = "${OUTPUT_PATH}"
-if [ "$machine" = "windows" ] ; then
-  echo Output unix path = "${OUTPUT_PATH_UNIX}"
 fi
 
 
@@ -183,15 +192,9 @@ else
   IMAGE_PATH="$OUTPUT_PATH/$NAME"
   INPUT_DIR="$INPUT_PATH_UNIX/weasis"
 fi
-MAC_SIGN=""
+
 WEASIS_CLEAN_VERSION=$(echo $WEASIS_VERSION | sed -e 's/"//g' -e 's/-.*//')
-if [ "$machine" = "macosx" ] ; then
-  WEASIS_VERSION="$WEASIS_CLEAN_VERSION"
-  JVM_ARGS="-Dapple.laf.useScreenMenuBar=true $JVM_ARGS"
-  if [[ ! -x "$CERTIFICATE" ]] ; then
-    MAC_SIGN="--mac-sign"
-  fi
-fi
+
 
 # Remove pack jar for launcher
 rm -f "$INPUT_DIR"/*.jar.pack.gz
@@ -218,81 +221,60 @@ fi
 if [ -d "${OUTPUT_PATH}" ] ; then
   rm -rf "${OUTPUT_PATH}"
 fi
-if [ -d "${OUTPUT_PATH}-debug" ] ; then
-  rm -rf "${OUTPUT_PATH}-debug"
-fi
-
-# Build Java Runtime
-$JLINKCMD --add-modules "$JDK_MODULES" --output "$OUTPUT_PATH/runtime"
-
-$JPKGCMD create-image --input "$INPUT_DIR" --output "$OUTPUT_PATH" --identifier "$IDENTIFIER" --name "$NAME" \
---resource-dir "resources" --main-jar weasis-launcher.jar --main-class org.weasis.launcher.AppLauncher --runtime-image "$OUTPUT_PATH/runtime" \
---jvm-args "$JVM_ARGS" --app-version "$WEASIS_VERSION" --verbose
-
-# Build exe for debugging in the console and copy them into the debug folder
-if [ "$machine" == "windows" ] ; then
-  $JPKGCMD create-image --input "$INPUT_DIR" --output "$OUTPUT_PATH-debug" --identifier "$IDENTIFIER" --name "$NAME" \
-  --resource-dir "resources" --main-jar weasis-launcher.jar --main-class org.weasis.launcher.AppLauncher --runtime-image "$OUTPUT_PATH/runtime" \
-  --jvm-args "$JVM_ARGS" --app-version "$WEASIS_VERSION" --win-console --verbose
-  mkdir "$IMAGE_PATH\\debug"
-  cp "$OUTPUT_PATH-debug\\$NAME\\$NAME.exe"  "$IMAGE_PATH\\debug\\$NAME.exe"
-fi
 
 if [ "$machine" = "macosx" ] ; then
-  OUT_APP="$OUTPUT_PATH_UNIX/$NAME.app/Contents/Java"
-else
-  OUT_APP="$OUTPUT_PATH_UNIX/$NAME/app"
-fi
-
-match="app.name"
-insertWeasis='app.splash=resources\/images\/about-round.png\
-#app.memory=50%\
-app.identifier=org.weasis.viewer\
-app.preferences.id=org\/weasis\/viewer\
-app.classpath=felix.jar:substance.jar:weasis-launcher.jar\
-'
-sed -i.bck '/^app\.identifier/d' "$OUT_APP/$NAME.cfg"
-sed -i.bck '/^app\.preferences\.id/d' "$OUT_APP/$NAME.cfg"
-sed -i.bck '/^app\.classpath/d' "$OUT_APP/$NAME.cfg"
-sed -i.bck "s/$match/$insertWeasis$match/" "$OUT_APP/$NAME.cfg"
-rm -f "$OUT_APP/$NAME.cfg.bck"
-
-
-if [ "$machine" = "linux" ] ; then
-  cp "resources/Dicomizer.desktop" "$OUTPUT_PATH_UNIX/$NAME/Dicomizer.desktop"
+  DICOMIZER_CONFIG="Dicomizer=$RES/dicomizer-launcher.properties"
+  declare -a customOptions=("--java-options" "-splash:\$APPDIR/resources/images/about-round.png" "--java-options" "-Dapple.laf.useScreenMenuBar=true")
+  if [[ ! -x "$CERTIFICATE" ]] ; then
+    declare -a signArgs=("--mac-package-identifier" "$IDENTIFIER" "--mac-signing-key-user-name" "$CERTIFICATE"  "--mac-sign")
+  else
+    declare -a signArgs=("--mac-package-identifier" "$IDENTIFIER")
+  fi
 elif [ "$machine" = "windows" ] ; then
-  # Fix icon of second launcher
-  cp "resources/Dicomizer.ico" "$OUTPUT_PATH_UNIX/$NAME/Dicomizer.ico"
-elif [ "$machine" = "macosx" ] ; then
-  cp -Rf "weasis-uri-handler.app" "$OUTPUT_PATH_UNIX/$NAME.app/Contents/MacOS/"
-  cp -Rf "Dicomizer.app" "$OUTPUT_PATH_UNIX/$NAME.app/Contents/MacOS/"
+  DICOMIZER_CONFIG="Dicomizer=$RES\dicomizer-launcher.properties"
+  declare -a customOptions=("--java-options" "-splash:\$APPDIR\resources\images\about-round.png" )
+  declare -a signArgs=()
+else
+  DICOMIZER_CONFIG="Dicomizer=$RES/dicomizer-launcher.properties"
+  declare -a customOptions=("--java-options" "-splash:\$APPDIR/resources/images/about-round.png" )
+  declare -a signArgs=()
 fi
+declare -a commonOptions=("--java-options" "-Dgosh.port=17179" "--java-options" "--illegal-access=warn" \
+"--java-options" "--add-exports=java.base/sun.net.www.protocol.http=ALL-UNNAMED" "--java-options" "--add-exports=java.base/sun.net.www.protocol.file=ALL-UNNAMED" \
+"--java-options" "--add-exports=java.base/sun.net.www.protocol.https=ALL-UNNAMED" "--java-options" "--add-exports=java.base/sun.net.www.protocol.ftp=ALL-UNNAMED" \
+"--java-options" "--add-exports=java.base/sun.net.www.protocol.jar=ALL-UNNAMED" "--java-options" "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED" \
+"--java-options" "--add-opens=java.base/java.net=ALL-UNNAMED" "--java-options" "--add-opens=java.base/java.lang=ALL-UNNAMED" \
+"--java-options" "--add-opens=java.base/java.security=ALL-UNNAMED" "--java-options" "--add-opens=java.base/java.io=ALL-UNNAMED" \
+"--java-options" "--add-opens=java.desktop/javax.imageio.stream=ALL-UNNAMED" "--java-options" "--add-opens=java.desktop/javax.imageio=ALL-UNNAMED" \
+"--java-options" "--add-opens=java.desktop/com.sun.awt=ALL-UNNAMED" )
+
+$JPKGCMD --type app-image --input "$INPUT_DIR" --dest "$OUTPUT_PATH" --name "$NAME" \
+--main-jar weasis-launcher.jar --main-class org.weasis.launcher.AppLauncher --add-modules "$JDK_MODULES" \
+--add-launcher ${DICOMIZER_CONFIG} --resource-dir "$RES"  --app-version "$WEASIS_CLEAN_VERSION" \
+--verbose "${signArgs[@]}" "${customOptions[@]}" "${commonOptions[@]}"
 
 if [ "$PACKAGE" = "YES" ] ; then
-  FILE_ASSOC="file-associations.properties"
   VENDOR="Weasis Team"
-  COPYRIGHT="© 2009-2019 Weasis Team"
+  COPYRIGHT="© 2009-2020 Weasis Team"
   if [ "$machine" = "windows" ] ; then
-    $JPKGCMD create-installer --app-image "$IMAGE_PATH" --output "$OUTPUT_PATH" --name "$NAME" --resource-dir "resources" \
-    --license-file "$INPUT_PATH\Licence.txt" --description "Weasis DICOM viewer" \
-    --win-menu --win-menu-group "$NAME" --win-registry-name "weasis" \
-    --copyright "$COPYRIGHT" --app-version "$WEASIS_CLEAN_VERSION" \
-    --vendor "$VENDOR" --file-associations "$FILE_ASSOC" --verbose
+    [ "$ARC_NAME" = "x86" ]  && UPGRADE_UID="3aedc24e-48a8-4623-ab39-0c3c01c7383b" || UPGRADE_UID="3aedc24e-48a8-4623-ab39-0c3c01c7383a"
+    $JPKGCMD --type "msi" --app-image "$IMAGE_PATH" --dest "$OUTPUT_PATH" --name "$NAME" --resource-dir "$RES/msi/$ARC_NAME" \
+    --license-file "$INPUT_PATH\Licence.txt" --description "Weasis DICOM viewer" --win-upgrade-uuid "$UPGRADE_UID"  \
+    --win-menu --win-menu-group "$NAME" --copyright "$COPYRIGHT" --app-version "$WEASIS_CLEAN_VERSION" \
+    --vendor "$VENDOR" --file-associations "${curPath}\file-associations.properties" --verbose
+    mv "$OUTPUT_PATH_UNIX/$NAME-$WEASIS_CLEAN_VERSION.msi" "$OUTPUT_PATH_UNIX/$NAME-$WEASIS_CLEAN_VERSION-$ARC_NAME.msi"
   elif [ "$machine" = "linux" ] ; then
-    $JPKGCMD create-installer --app-image "$IMAGE_PATH" --output "$OUTPUT_PATH"  --name "$NAME" --resource-dir "resources" \
-    --license-file "$INPUT_PATH/Licence.txt" --description "Weasis DICOM viewer" \
-    --linux-bundle-name "weasis" --linux-deb-maintainer "Nicolas Roduit" --linux-rpm-license-type "EPL-2.0" \
-    --linux-menu-group "Viewer;MedicalSoftware;Graphics;" --copyright "$COPYRIGHT" --app-version "$WEASIS_CLEAN_VERSION" \
-    --vendor "$VENDOR" --file-associations "linux-$FILE_ASSOC" --verbose
-  elif [ "$machine" = "macosx" ] ; then
-    declare -a installerTypes=("pkg")
+    declare -a installerTypes=("deb" "rpm")
     for installerType in ${installerTypes[@]}; do
-      $JPKGCMD create-installer --app-image "$IMAGE_PATH.app" --output "$OUTPUT_PATH" --name "$NAME" --resource-dir "resources" \
-      --license-file "$INPUT_PATH/Licence.txt" --mac-bundle-name "$NAME" --mac-bundle-identifier "$IDENTIFIER" \
-      --copyright "$COPYRIGHT" --app-version "$WEASIS_CLEAN_VERSION" \
-      --mac-signing-key-user-name "$CERTIFICATE" --installer-type "$installerType" \
-      --file-associations "$FILE_ASSOC" --verbose "$MAC_SIGN"
+      $JPKGCMD --type "$installerType" --app-image "$IMAGE_PATH" --dest "$OUTPUT_PATH"  --name "$NAME" --resource-dir "$RES" \
+      --license-file "$INPUT_PATH/Licence.txt" --description "Weasis DICOM viewer" --vendor "$VENDOR" \
+      --copyright "$COPYRIGHT" --app-version "$WEASIS_CLEAN_VERSION" --file-associations "${curPath}/file-associations.properties" \
+      --linux-app-release "$REVISON_INC" --linux-package-name "weasis" --linux-deb-maintainer "Nicolas Roduit" --linux-rpm-license-type "EPL-2.0" \
+      --linux-menu-group "Viewer;MedicalSoftware;Graphics;" --linux-app-category "science" --linux-shortcut --verbose
     done
+  elif [ "$machine" = "macosx" ] ; then
+    $JPKGCMD --type "pkg" --app-image "$IMAGE_PATH.app" --dest "$OUTPUT_PATH" --name "$NAME" --resource-dir "$RES" \
+    --license-file "$INPUT_PATH/Licence.txt" --copyright "$COPYRIGHT" --app-version "$WEASIS_CLEAN_VERSION" \
+    --verbose "${signArgs[@]}"
   fi
 fi
-
